2003-08-26  Danny Smith <dannysmith@users.sourceforge.net>

	* lib/test.c: Add snmp.h, winsnmp.h amd mgmtapi.h to
	includes.

2003-08-26  Filip Navara  <xnavara@volny.cz>

	* include/snmp.h: New file.
	* include/winsnmp.h: New file.
	* include/mgmtapi.h: New file.
	* lib/snmpapi.def: New file.
	* lib/wsnmp32.def: New file.
	* lib/igmpagnt.def: New file.
	* lib/mgmtapi.def (SnmpMgrCtl) Add stub.
	(SnmpMgrGetTrapEx): Ditto.
	(SnmpMgrMIB2Disk): Remove.
	(dbginit): Remove.

2003-08-25  Steven Edwards  <Steven_Ed4153@yahoo.com>

	* include/ddk/ntifs.h: Change all C++ style comments to C.
	* include/GL/gl.h: Ditto.

2003-08-25  Martin Fuchs  <Martin-Fuchs@gmx.net>

	* include/shlobj.h (SFGAO_GHOSTED): Correct.
	(SFGAO_HIDDEN): Add define.

2003-08-25  Filip Navara  <xnavara@volny.cz>

	* include/commctrl.h (ILCF_*): Add defines.
	(ILD_*): Ditto.
	(HDS_*); Ditto.
	(IPN_FIRST, IPN_LAST): Cast to UINT.
	(SBN_FIRST, SBN_LAST): Add defines.
	(PGN_*): Ditto.
	(HDF_JUSTIFYMASK): Fix typo.
	(HDM_*): Add defines.
	(HICF_*): Ditto.
	(I_INDENTCALLBACK,I_IMAGENONE): Ditto.
	(TBSTATE_MARKED): Add define.
	(TBSTYLE_EX_*): Add defines.
	(TBCDRF_*): Ditto.
	(IDB_HIST_SMALL_COLOR,IDB_HIST_LARGE_COLOR): Ditto.
	(TB_*): Ditto.
	(TBN_*): Ditto.
	(TBNRF_*): Ditto.
	(TTF_*): Ditto.
	(TBCD_*): Ditto.
	(TBDDRET_*): Ditto.
	(TBIMHT_*): Ditto.
	(TTM_*): Ditto.
	(UDM_*): Ditto.
	(TBIF_BYINDEX): Define as hex constant.
	(CDIS_*): Add defines.
	(CDDS_SUBITEM): Add define.
	(LVIF_*): Add defines.
	(LVM_*): Ditto.
	(LVGIT_UNFOLDED): Add define.
	(TVM_): Add defines.
	(TVE_EXPANDPARTIAL): Add define.
	(TVGN_LASTVISIBLE): Ditto.
	(TVN_*): Add defines.
	(TVNRET_*): Add defines.
	(TCIF_STATE): Add define.
	(NM_TOOLTIPSCREATED): Ditto.
	(CCM_*): Add defines.
	(INFOTIPSIZE): Add numeric value.
	(ODT_LISTVIEW): Ditto.
	(MCM_GETMAXTODAYWIDTH): Ditto.
	(MCHT_*): Add defines.
	(UDM_SETRANGE32,UDM_GETRANGE32): Define in terms of WM_USER.
	(PGF_*): Add defines.
	(PGM_*): Ditto.
	(TBINSERTMARK): Add structure.